Bug 950545 (part 2) - Fix assertion failures and output mismatches in the DMD test.  r=iacobcatalin. DONTBUILD because DMD is NPOTB

--HG--
extra : rebase_source : 48388b467bcbce8347792c8e7f0cb45b1fc177aa